fix layout issues

--- a/src/Styles/pages/cervejeiras/_cervejeiras-vitrine-smartbeer.scss
+++ b/src/Styles/pages/cervejeiras/_cervejeiras-vitrine-smartbeer.scss
@@ -173,8 +173,7 @@
 				margin: 0 auto;
 				order: -1;
 				padding-bottom: 15px;
-				padding-left: 25px;
-				width: 25%;
+				width: 50%;
 			}
 		}
 
@@ -196,17 +195,19 @@
 
 						&:before {
 							background-color: #702f8f;
-							border: 2px solid #fff;
+							border: 4px solid #fff;
 							border-radius: 10px;
 							box-shadow: 0 0 0 2px #702f8f;
 							content: '';
 							display: inline-block;
-							height: 10px;
-							margin: 2px 2px;
-							position: relative;
-							right: 5px;
-							top: 2px;
-							width: 10px;
+							height: 16px;
+							width: 16px;
+
+							@include breakpoint ('medium', 'max') {
+								border-width: 3px;
+								height: 12px;
+								width: 12px;
+							}
 						}
 					}
 				}
@@ -216,6 +217,12 @@
 				@include rfs(14);
 				display: inline-block;
 				min-width: 65px;
+				padding-left: 25px;
+				position: relative;
+
+				@include breakpoint ('medium', 'max') {
+					padding-left: 20px;
+				}
 
 				&.unavailable {
 					opacity: .3;
@@ -226,11 +233,17 @@
 					border-radius: 10px;
 					content: '';
 					display: inline-block;
-					height: 14px;
-					position: relative;
-					right: 5px;
-					top: 2px;
-					width: 14px;
+					height: 20px;
+					left: 0;
+					position: absolute;
+					top: 50%;
+					transform: translateY(-50%);
+					width: 20px;
+
+					@include breakpoint ('medium', 'max') {
+						height: 16px;
+						width: 16px;
+					}
 				}
 			}
 
